CS/drone_ws/log/build_2021-11-11_23-19-23/controls/stderr.log
  File "/home/ubuntu/cu-arc-21-22/CS/drone_ws/install/controls/lib/python3.8/site-packages/controls/pid.py", line 34
    throttle = self.kp * current_error +
                                        ^
SyntaxError: invalid syntax

